Fixed deprecations & unused imports